--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@mui/material": "^7.0.1",
     "aos": "^2.3.4",
     "cross-env": "^7.0.2",
-    "next": "^15.2.4",
+    "next": "^<latest-version>",
     "node-fetch": "^2.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
