--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     ]
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.12.1",
+    "@aws-amplify/core": "^6.11.1",
+    "@aws-amplify/ui-react": "^6.9.5",
     "@babel/runtime": "^7.27.0",
     "@emotion/cache": "^11.4.0",
     "@emotion/react": "^11.14.0",
@@ -38,9 +41,10 @@
     "@mui/icons-material": "^7.0.0",
     "@mui/material": "^7.0.1",
     "aos": "^2.3.4",
+    "aws-amplify": "^6.14.1",
     "cross-env": "^7.0.2",
     "next": "^15.2.4",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "^3.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
